fix OuterCommandTests